# yt-frontend

./: .env.example  .gitignore  package-lock.json  package.json
src/: App.css  App.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md  ffmpeg-aarch64-apple-darwin
src-tauri/src/: lib.rs  storage.rs
src-tauri/src/commands/: license.rs  mod.rs  video.rs
src/api/: backend.ts
src/components/: DownloaderPanel.tsx  LicenseLockScreen.tsx  LoginModule.tsx  PaymentsModule.tsx
src/context/: AuthContext.tsx
src/hooks/: useLicense.ts
