[package]
name = "youtube-downloader"
version = "0.1.0"
description = "Cross-platform YouTube downloader (Tauri + React)"
authors = ["you"]
edition = "2021"

[lib]
name = "youtube_downloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
machine-uid = "0.5"
keyring = "2"
anyhow = "1"
thiserror = "1"
regex = "1"
dirs = "5"
sha2 = "0.10"
hex = "0.4"
aes-gcm = "0.10"
rand = "0.8"
